# VUTBR-FIT

./: .gitmodules  README.md
2BIT/summer/IZG/: CMakeLists.txt  start_here.html
2BIT/summer/IZG/doc/html/: TriangleExample-example.html  buffer_8h_source.html  bunny_8c.html  bunny_8h_source.html  camera_8h.html  camera_8h_source.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_df997ef5cbe81af8266600b381d65502.html  examples.html  files.html  fwd_8h_source.html  globals_c.html  globals_d.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_c.html  globals_func_f.html  globals_func_l.html  globals_func_m.html  globals_func_n.html  globals_func_p.html  globals_func_r.html  globals_func_t.html  globals_func_v.html  globals_l.html  globals_m.html  globals_p.html  globals_r.html  globals_s.html  globals_type.html  globals_v.html  globals_w.html  gpu_8h_source.html  group__cpu__side.html  group__shader__side.html  index.html  linearAlgebra_8c.html  linearAlgebra_8h.html  modules.html  (+20 more)
2BIT/summer/IZG/doc/html/search/: all_0.js  all_10.js  all_11.js  all_15.js  all_5.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_5.js  defines_0.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  enumvalues_7.js  enumvalues_8.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  files_a.js  functions_6.js  functions_8.js  functions_9.js  functions_b.js  (+17 more)
2BIT/summer/IZG/doc/latex/: camera_8c.tex  camera_8h.tex  examples.tex  group__cpu__side.tex  group__gpu__side.tex  index.tex  linearAlgebra_8c.tex  linearAlgebra_8h.tex  main_8c.tex  modules.tex  mouseCamera_8c.tex  mouseCamera_8h.tex  refman.tex  structBunnyVertex.tex  structGPUFragmentShaderInput.tex  structGPUPrimitive.tex  structGPUTriangleList.tex  structGPUVertexPullerOutput.tex  structGPUVertexShaderOutput.tex  structMat4.tex  structPhongVariables.tex  structTriangleExampleVariables.tex  structVec3.tex  student__cpu_8c.tex  student__cpu_8h.tex  swapBuffers_8c.tex  swapBuffers_8h.tex  todo.tex  vertexPuller_8h.tex
2BIT/summer/IZG/proj1/: Doxyfile
2BIT/summer/IZG/proj1/gpu/: gpu.cpp
2BIT/summer/IZG/proj1/student/: buffer.h  camera.c  fwd.h  gpu.h  linearAlgebra.c  program.h  student_cpu.c  student_shader.h  swapBuffers.h
2BIT/summer/IZG/student/: bunny.c  bunny.h  linearAlgebra.h  main.c  mouseCamera.c  mouseCamera.h  student_cpu.h  student_shader.c  uniforms.h  vertexPuller.h
2BIT/summer/IZG/tests/: conformanceTests.cpp  conformanceTests.h  performanceTest.cpp  performanceTest.h
(+230 files in other folders)
